Update to implement the use case

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,12 +8,8 @@ import Card from "../components/Card.astro";
     <h1>Welcome to <span class="text-gradient">Astro</span></h1>
 
     <ul role="list" class="link-card-grid">
-      <Card
-        href="/private-redirect"
-        title="Private Redirect"
-        body="Throws an Error"
-      />
-      <Card href="/public-redirect" title="Public Redirect" body="All good" />
+      <Card href="/nl/zoeken" title="Zoeken" body="Search in Dutch" />
+      <Card href="/en/search" title="Search" body="Search in English" />
     </ul>
   </main>
 </Layout>
